...
                IconButton(
                    onClick = onClose,
                    modifier = Modifier.size(sizeTokens.closeButtonSize)
                ) {
                    Icon(
                        imageVector = Icons.Default.Close,
                        contentDescription = "Close",
                        modifier = Modifier.size(sizeTokens.closeButtonSize * TagDefaults.closeIconScale())
                    )
                }
            }
        }
    }
...
